<resources>
    <string name="app_name">Moula project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="la_moula">La Moula</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="see_currencies">See Currencies</string>
    <string name="transactions">Transactions</string>
    <string name="enter_an_amount">Enter an amount</string>
    <string name="enter_an_amount_in_dollars">enter an amount in dollars</string>
    <string name="add_money">Add Money</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="enter_an_amount_to_add_to_your_account">Enter an amount to add to your account</string>
    <string name="add_fund">Add fund</string>
    <string name="enter_an_amount_to_add">Enter an Amount to add</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="send">send</string>
    <string name="enter_an_amount_to_transfer">Enter an amount to transfer</string>
    <string name="transfer">Transfer</string>
    <string name="enter_the_name_of_the_user">Enter the name of the user</string>
</resources>