<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".BankingActivity">

    <TextView
        android:id="@+id/bank_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="Your Account"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/banking_account_field"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/bank_account"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/balance"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/banking_account_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:textColor="#3B84F1"
        android:text="Add a Transaction"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addMoney"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:textColor="#3B84F1"
        android:text="@string/add_money"
        android:textSize="20sp" />

    <Button
        android:id="@+id/TrB"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_below="@id/addMoney"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/transfer"
        android:textColor="#3B84F1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textColor="#3B84F1"
        android:textSize="20sp" />

</RelativeLayout>
