<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Money_Transfer">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="560dp"
        android:text="@string/money_transfer"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/white"
        android:text="@string/send"
        android:textColor="#3B84F1" />

    <EditText
        android:id="@+id/TrMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/enter_an_amount_to_transfer"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/TrId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/enter_an_amount_to_transfer"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp" />


</RelativeLayout>